<resources>
    <string name="app_name">Pets</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="device_is_offline">Device is offline!</string>
    <string name="loading">Loading&#8230;</string>
    <string name="retry">Try Again</string>
    <string name="server_not_responding">Server not responding try again later?</string>
    <string name="please_check_internet_connection">Please check internet connection</string>
    <string name="internet_connection_has_been_lost">It seems the internet connection has been lost. Please retry when your connection returns.</string>
    <string name="no_result_found">No result found</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="continue_with_social_media">Continue with Social media</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact">Contact</string>
    <string name="location">Location</string>
    <string name="register">Register</string>
    <string name="i_accept">I Accept</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="already_account">Already Account</string>
    <string name="submit">Submit</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="enter_verification_code_sent_on">Enter verification code sent on to :-</string>
    <string name="dash">-</string>
    <string name="dint_receive_code">Didn\'t receive the code yet?</string>
    <string name="resent">Resend code</string>
    <string name="otp">OTP Verification</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="password_must_be_greater_than_6">Password length must be greater or equal to 6 characters</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="please_enter_contact">Please enter contact</string>
    <string name="please_accept_terms">Please accept terms and conditions</string>
    <string name="please_select_location">Please select location</string>
    <string name="please_enter_confirm_password_match">Password and Confirm password did\'nt matched</string>
    <string name="enter_all_fields">Please enter Verification code</string>
    <string name="otp_verified">OTP verified successfully</string>
    <string name="otp_resent">Verification code sent successfully</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to Logout ?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="find_hostel">Find Hostel</string>
    <string name="hostel">Hostel</string>
    <string name="contact_person">Contact Person</string>
    <string name="address">Address</string>
    <string name="distance">Distance</string>
    <string name="description">Description</string>
    <string name="images">Images</string>
    <string name="home">Home</string>
    <string name="my_pets">My Pets</string>
    <string name="my_matches">My Matches</string>
    <string name="my_interests">My Interest</string>
    <string name="sent_feedback">Sent Feedback</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="choose_country">Choose Country</string>
    <plurals name="reviews_plural">
        <item quantity="one">(%d review)</item>
        <item quantity="other">(%d reviews)</item>
    </plurals>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>
    <string name="no_review_found">No review found</string>
    <string name="write_reviews">Write Reviews</string>
    <string name="please_write_your_review">Please write your review</string>
    <string name="please_give_ratings">Please give ratings</string>
    <string name="write_comment">Write Comment</string>
    <string name="are_you_sure_you_want_to_delete_review">Are you sure you want to delete review?</string>
    <string name="instagram">Instagram</string>
    <string name="change_photo">Change Photo</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="update">UPDATE</string>
    <string name="change_number">Change Number</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="please_enter_confirm_password_match_new">Password and Confirm password did\'nt matched</string>
    <string name="camera_permission">Camera permission needed. Please allow in App Settings for additional functionality.</string>
    <string name="select_image_from_gallery">Select Image From Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="select_photo">Select Photo</string>
    <string name="image_uploded">Image updated Successfully</string>
    <string name="adoption">Adoption</string>
    <string name="filter">Filter</string>
    <string name="type">Type</string>
    <string name="breed">Breed</string>
    <string name="gender">Gender</string>
    <string name="save">save</string>
    <string name="x_miles">%s miles</string>
    <string name="miles">miles</string>
    <string name="zero_mile">0 Mile</string>
    <string name="fifty_miles">50 Miles</string>
    <string-array name="gender_arr">
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>
    <string name="add_adoption">Add Adoption</string>
    <string name="certification">Certification</string>
    <string name="view">View</string>
    <string name="please_enter_pet_name">Please enter pet name</string>
    <string name="please_select_pet_type">Please select pet type</string>
    <string name="please_select_breed">Please select breed</string>
    <string name="please_select_birthdate">Please select birthdate</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="please_enter_pet_description">Please enter pet description</string>
    <string name="please_select_pet_type_first">Please select pet type first</string>
    <string name="fun_zone">Fun Zone</string>
    <string name="find_match">Find Match</string>
    <string name="pet_sitters">Pet Sitters</string>
    <string name="buy_and_sell"><![CDATA[Buy & Sell]]></string>
    <string name="buddy_alert">Buddy Alert</string>
    <string name="find_vet">Find Vet</string>
    <string name="add_pet">Add Pet</string>
    <string name="pet_name">Pet Name</string>
    <string name="dob">DOB</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="certificate">Certificate</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="add_photo">Add Photo</string>
    <string name="select_date">Select Date</string>
    <string name="age">Age</string>
    <string name="vets">Vets</string>
    <string name="pets_match">Pets Match</string>
    <string name="pet_type">Pet Type</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="post_your_product">Post your product</string>
    <string name="product_name">Product Name</string>
    <string name="select_category">Select Category</string>
    <string name="post">POST</string>
    <string name="add_image">Add Image</string>
    <string name="apply">APPLY</string>
    <string name="type_of_pet">Type of Pet</string>
    <string name="category">Category</string>
    <string name="sort_by">Sort by</string>
    <string name="x_price">$ %s</string>
    <string name="sort_price">Sort Price</string>
    <string name="done">Done</string>
    <string name="price">Price</string>
    <string name="enter_product_name">Please enter product name</string>
    <string name="select_product_category">Please select product category</string>
    <string name="enter_product_price">Please enter product price</string>
    <string name="enter_product_description">Please enter product description</string>
    <string name="please_add_product_image">Please add product image</string>
    <string-array name="sort_price_arr">
        <item>PRICE</item>
        <item>REVIEWS</item>
    </string-array>
    <string name="send">Send</string>
    <string name="start_typing">Start typing&#8230;</string>
    <string name="helpful">Helpful</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="title">Title</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="add_image_video">Add image or video</string>
    <string name="crate_post">Crate Post</string>
    <string name="enter_your_comment">Enter your Comment</string>
    <string name="please_select_dob">Please select date of birth</string>
    <string name="add_video">Add Video</string>
    <string name="please_enter_title">Please enter title</string>
    <string name="please_enter_contact_person">Please enter contact person</string>
    <string name="please_enter_contact_number">Please enter contact number</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="please_add_pet_image">Please add pet image</string>
    <string name="birthday">BIRTHDAY:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_post">Edit Post</string>
    <string name="edit_pet">Edit Pet</string>
    <string name="image_deleted_successfully">Image deleted successfully</string>
    <string name="ready_for_match">Ready for match</string>
    <string name="just_now">Just now</string>
    <string name="please_enter_comment">Please enter comment</string>
    <string name="are_you_sure_you_want_to_delete_comment">Are you sure you want to delete comment?</string>
    <string name="no_comment_found">No comment found</string>
    <string name="pet_certificate_doesnt_exist">Pet certificate doesn\'t exist</string>
    <string name="delete_pet">DELETE PET</string>
    <string name="are_you_sure_you_want_to_delete_pet">Are you sure you want to delete your pet</string>
    <string name="feedback">Enter feedback</string>
    <string name="enter_your_feedback">Enter your feedback</string>
    <string name="register_as_pet_sitter">Register As Pet Sitter</string>
    <string name="save_information">Save Information</string>
    <string name="please_enter_phone_number">Please enter phone number</string>
    <string name="pet_sitter">Pet Sitter</string>
</resources>