<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/grp1">
        <item
            android:id="@+id/action_edit"
            android:orderInCategory="100"
            android:title="@string/edit"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/grp2">
        <item
            android:id="@+id/action_delete"
            android:orderInCategory="100"
            android:title="@string/delete"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/grp3">
        <item
            android:id="@+id/action_cancel"
            android:orderInCategory="100"
            android:title="@string/cancel"
            app:showAsAction="never" />
    </group>
</menu>