<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pets.app.activities.ProfileActivity">

    <include layout="@layout/app_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_size_20">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="@dimen/dimen_size_100"
                android:layout_height="@dimen/dimen_size_100"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_size_10"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/tvChangePhoto"
                style="@style/TextViewStyle"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/dimen_size_10"
                android:text="@string/change_photo"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_12" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/FloatingLabel">

                <EditText
                    android:id="@+id/edtName"
                    style="@style/EditTextStyle"
                    android:hint="@string/name"
                    android:inputType="textPersonName|textCapSentences" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_size_5"
                app:hintTextAppearance="@style/FloatingLabel">

                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/EditTextStyle"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_size_5">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edt_country_code_container"
                    android:layout_width="@dimen/dimen_size_50"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/FloatingLabel">

                    <EditText
                        android:id="@+id/edtCountryCode"
                        style="@style/EditTextStyle"
                        android:layout_width="@dimen/dimen_size_50"
                        android:editable="false"
                        android:ellipsize="end"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:inputType="textShortMessage"
                        android:text="+91" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/edt_country_code_container"
                    android:layout_toRightOf="@+id/edt_country_code_container"
                    app:hintTextAppearance="@style/FloatingLabel">

                    <EditText
                        android:id="@+id/edtContact"
                        style="@style/EditTextStyle"
                        android:editable="false"
                        android:ellipsize="end"
                        android:focusable="false"
                        android:focusableInTouchMode="true"
                        android:hint="@string/contact"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="15" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/tvChangeNumber"
                style="@style/TextViewStyle"
                android:layout_gravity="end"
                android:padding="@dimen/dimen_size_5"
                android:text="@string/change_number"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_12" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_size_5"
                app:hintTextAppearance="@style/FloatingLabel">

                <EditText
                    android:id="@+id/edtLocation"
                    style="@style/EditTextStyle"
                    android:drawableEnd="@drawable/location1"
                    android:drawableRight="@drawable/location1"
                    android:editable="false"
                    android:ellipsize="end"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:hint="@string/location" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/FloatingLabel">

                <EditText
                    android:id="@+id/edtDescription"
                    style="@style/EditTextStyle"
                    android:gravity="start"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:maxLength="100"
                    android:minHeight="@dimen/dimen_size_80"
                    android:singleLine="false" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvChangePassword"
                style="@style/TextViewStyle"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_size_15"
                android:padding="@dimen/dimen_size_5"
                android:text="@string/change_password"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_12" />

            <Button
                android:id="@+id/btnUpdate"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:text="@string/update" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
