<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pets.app.initialsetup.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_size_15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_size_180"
            android:background="@drawable/login_bg"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />

            <TextView
                style="@style/TextViewStyle"
                android:layout_margin="@dimen/dimen_size_10"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_size_20"
            android:layout_marginRight="@dimen/dimen_size_20"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewStyle"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/dimen_size_25"
                android:text="@string/please_login_to_continue"
                android:textSize="@dimen/text_size_18" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/FloatingLabel">

                <EditText
                    android:id="@+id/edtEmail"
                    style="@style/EditTextStyle"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_size_10"
                app:hintTextAppearance="@style/FloatingLabel"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edtPassword"
                    style="@style/EditTextStyle"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/rel_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_size_15"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkRememberMe"
                    style="@style/CheckBoxStyle"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/remember_me" />

                <TextView
                    android:id="@+id/tvForgotPassword"
                    style="@style/TextViewStyle"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dimen_size_5"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_size_12" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnLogin"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:text="@string/login" />

            <TextView
                android:id="@+id/tvSignUp"
                style="@style/TextViewStyle"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:text="@string/app_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_size_15">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_size_0.5px"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/tvOr"
                    android:layout_toStartOf="@+id/tvOr"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/tvOr"
                    style="@style/TextViewStyle"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/dimen_size_5"
                    android:layout_marginRight="@dimen/dimen_size_5"
                    android:text="@string/or" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_size_0.5px"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/tvOr"
                    android:layout_toRightOf="@+id/tvOr"
                    android:background="@color/black" />
            </RelativeLayout>

            <TextView
                style="@style/TextViewStyle"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_size_15"
                android:text="@string/continue_with_social_media" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_size_10"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/facebook" />

                <View
                    android:layout_width="@dimen/dimen_size_10"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/imgInstagram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/instagram" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
