<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.pets.app.activities.adoption.AddAdoptionActivity">

    <include layout="@layout/app_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_size_200">

                <ImageView
                    android:id="@+id/ivPost"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/createpost" />

                <TextView
                    android:id="@+id/tvAddImage"
                    style="@style/TextViewStyle"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/dimen_size_50"
                    android:layout_marginEnd="@dimen/dimen_size_10"
                    android:layout_marginRight="@dimen/dimen_size_10"
                    android:text="@string/add_image_video"
                    android:textColor="@color/grey" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dimen_size_20">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_size_10"
                    app:hintTextAppearance="@style/FloatingLabel">

                    <EditText
                        android:id="@+id/etTitle"
                        style="@style/EditTextStyle"
                        android:hint="@string/title"
                        android:inputType="textPersonName|textCapSentences" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_size_10"
                    app:hintTextAppearance="@style/FloatingLabel">

                    <EditText
                        android:id="@+id/etContactPerson"
                        style="@style/EditTextStyle"
                        android:hint="@string/contact_person"
                        android:inputType="textPersonName|textCapSentences" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_size_10"
                    app:hintTextAppearance="@style/FloatingLabel">

                    <EditText
                        android:id="@+id/etPhoneNumber"
                        style="@style/EditTextStyle"
                        android:hint="@string/phone_number"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_size_10"
                    app:hintTextAppearance="@style/FloatingLabel">

                    <EditText
                        android:id="@+id/etEmail"
                        style="@style/EditTextStyle"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_size_10"
                    app:hintTextAppearance="@style/FloatingLabel">

                    <EditText
                        android:id="@+id/etAddress"
                        style="@style/EditTextStyle"
                        android:focusable="false"
                        android:hint="@string/address"
                        android:inputType="textPersonName|textCapSentences" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/FloatingLabel">

                    <EditText
                        android:id="@+id/etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="start"
                        android:hint="@string/description"
                        android:inputType="text"
                        android:maxLength="500"
                        android:maxLines="5"
                        android:minHeight="@dimen/dimen_size_80"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnSave"
                    style="@style/ButtonStyle"
                    android:layout_marginTop="@dimen/dimen_size_20"
                    android:text="@string/save" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
